# rust-producer

./: Cargo.toml
src/: main.rs
src/service/model/: mod.rs
