[package]
name = "rust-kafka-producer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
kafka="0.8.0"
env_logger = "0.9.3"
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
chrono = { version="0.4.23", features=["serde"] }
chrono-tz = "0.8.0"
threadpool = "1.8.1"
rand = "0.8.5"